--- a/app/js/pages/login.html
+++ b/app/js/pages/login.html
@@ -41,7 +41,7 @@
                     <br>
                     <button type="button" class="btn btn-success btn-extra" ng-click="login()">Login Here!</button>
                     <small>Forgot Password?</small>
-                    <a href="/register" style="display: inline; color: #0033cc"> Register here</a>
+                    <a href="#register" style="display: inline; color: #0033cc"> Register here</a>
                 </div>
                 <div class="text-center">
                     <button type="button" class="btn btn-primary btn-extra"><b>Login using Facebook</b></button>
