commit for register page

--- a/app/js/pages/register.html
+++ b/app/js/pages/register.html
@@ -16,6 +16,9 @@
             </form>
         </div>
     </div>
+    <div class="row">
+        <h4>Ace shoulds Code here!</h4>
+    </div>
 </div>
 
 
