Renovation of login page, creation of registration page

--- a/app/js/pages/register.html
+++ b/app/js/pages/register.html
@@ -16,7 +16,50 @@
             </form>
         </div>
     </div>
-    <div class="row">
+    <br/>
+
+    <div class="col-sm-4 col-md-6 col-sm-offset-0 col-md-offset-0 ">
+        <h4>
+            Register Here!
+        </h4>
+
+        <form>
+            <div style="display: inline-block !important;">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="" name="" placeholder="First Name"/>
+                </div>
+            </div>
+            &nbsp;&nbsp;
+            <div style="display: inline-block !important;">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="" name="" placeholder="Last Name"/>
+                </div>
+            </div>
+            <div style="width: 410px">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="" name="" placeholder="User Name"/>
+                </div>
+            </div>
+            <div style="display: inline-block !important;">
+                <div class="form-group">
+                    <input type="password" class="form-control" id="" name="" placeholder="Password"/>
+                </div>
+            </div>
+            &nbsp;&nbsp;
+            <div style="display: inline-block !important;">
+                <div class="form-group">
+                    <input type="password" class="form-control" id="" name="" placeholder="Re-type Password"/>
+                </div>
+            </div>
+            <div style="width: 410px">
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email Address">
+                </div>
+            </div>
+
+
+        </form>
+
         <h4>Ace shoulds Code here!</h4>
     </div>
 </div>
