--- a/app/js/pages/item.html
+++ b/app/js/pages/item.html
@@ -20,7 +20,7 @@
     <br>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 hidden-sm">
                 <div style="padding-top: 20px" class="row">
                     <div class="col-md-3">
                         <img src="{{globals.rootUrl}}app/images/user-default.png" class="img-circle" width="70"
