profile page and gallery

--- a/app/js/pages/items.html
+++ b/app/js/pages/items.html
@@ -75,7 +75,7 @@
         </div>
         <br/>
 
-        <div class="col-md-3 col-sm-6" ng-repeat="item in items">
+        <div class="col-md-3 col-sm-6" ng-repeat="item in items" style="padding-bottom: 20px !important;">
             <div class="thumbnail">
                 <div style="height: 250px; overflow-y: hidden; vertical-align: middle">
                     <a href="#items/{{item.item_id}}" class="">
