--- a/app/js/pages/profile.html
+++ b/app/js/pages/profile.html
@@ -147,8 +147,8 @@
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <button class="btn btn-success btn-xs" type="submit"><i class="fa fa-comment"></i> Reply Comment</button>
-                            <button type="button" class="btn btn-success btn-xs"><i class="fa fa-file"></i> Send Proposal</button>
+                            <button class="btn btn-success btn-sm" type="submit"><i class="fa fa-comment"></i> Reply Comment</button>
+                            <button type="button" class="btn btn-success btn-sm"><i class="fa fa-file"></i> Send Proposal</button>
                         </div>
                     </div>
                 </div>
