--- a/app/js/pages/register.html
+++ b/app/js/pages/register.html
@@ -17,51 +17,71 @@
         </div>
     </div>
     <br/>
+<div class="container">
+    <div class="row" style="border: 1px solid #E5E5E5;">
+        <div class="col-sm-7 col-md-7">
+            <div class="text-center" style="border-top: 1px solid #e5e5e5">
+                <br/>
+                <h4>Know us more</h4>
+                <img src="{{globals.rootUrl}}app/images/videothumb.jpg">
+            </div>
+        </div>
+        <div class="col-sm-5 col-md-5 col-md-offset-0 col-sm-offset-0" style="background: white">
+            <br/>
+            <h4>
+                Register Here!
+            </h4>
 
-    <div class="col-sm-4 col-md-6 col-sm-offset-0 col-md-offset-0 ">
-        <h4>
-            Register Here!
-        </h4>
+            <form>
+                <div style="border: 3px; padding: 20px">
+                    <div style="display: inline-block !important;">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="" name="" placeholder="First Name"/>
+                        </div>
+                    </div>
+                    &nbsp;&nbsp;
+                    <div style="display: inline-block !important;">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="" name="" placeholder="Last Name"/>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="" name="" placeholder="User Name"/>
+                        </div>
+                    </div>
+                    <div style="display: inline-block !important;">
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="" name="" placeholder="Password"/>
+                        </div>
+                    </div>
+                    &nbsp;&nbsp;
+                    <div style="display: inline-block !important;">
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="" name="" placeholder="Re-type Password"/>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email Address">
+                        </div>
+                    </div>
+                    <div style="width: 410px">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default">Register</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <br/>
+            <br/>
 
-        <form>
-            <div style="display: inline-block !important;">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="" name="" placeholder="First Name"/>
-                </div>
-            </div>
-            &nbsp;&nbsp;
-            <div style="display: inline-block !important;">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="" name="" placeholder="Last Name"/>
-                </div>
-            </div>
-            <div style="width: 410px">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="" name="" placeholder="User Name"/>
-                </div>
-            </div>
-            <div style="display: inline-block !important;">
-                <div class="form-group">
-                    <input type="password" class="form-control" id="" name="" placeholder="Password"/>
-                </div>
-            </div>
-            &nbsp;&nbsp;
-            <div style="display: inline-block !important;">
-                <div class="form-group">
-                    <input type="password" class="form-control" id="" name="" placeholder="Re-type Password"/>
-                </div>
-            </div>
-            <div style="width: 410px">
-                <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email Address">
-                </div>
-            </div>
-
-
-        </form>
-
-        <h4>Ace shoulds Code here!</h4>
+        </div>
     </div>
+
+    </div>
+</div>
+
 </div>
 
 
