--- a/app/js/pages/items.html
+++ b/app/js/pages/items.html
@@ -70,8 +70,10 @@
 </style>
 <div class="container-fluid">
     <div class="row">
+
         <div class="page-header" style="padding-left: 20px; margin-bottom: 0px; padding-bottom: 0px; margin-top: 0px">
             <h3 style="color: #BED735">Browse Items <span style="color: #56BEC1;">Here!</span></h3>
+            {{user}}
         </div>
         <br/>
 
