--- a/app/js/pages/login.html
+++ b/app/js/pages/login.html
@@ -47,7 +47,7 @@
                     </div>
                     <br>
                     <br>
-                    <button style="width: 100px" class="btn btn-success btn-extra ng-click="login()">Login Here!</button>
+                    <button style="width: 100px" class="btn btn-success btn-extra" ng-click="login()">Login Here!</button>
                     <a href="#forgotPassword" style="display: inline; color: black"> Forgot password?</a>
                     <a href="#register" style="display: inline; color: #0033cc"> Register here</a>
                 </div>
