--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ngDialog/js/ngDialog.js"></script>
@@ -58,6 +59,7 @@
     <script src="app/js/controllers/postController.js"></script>
     <script src="app/js/controllers/registerController.js"></script>
     <script src="app/js/controllers/loginController.js"></script>
+    <script src="app/js/controllers/errorController.js"></script>
 
     <!--Services-->
     <script src="app/js/services/loginService.js"></script>
@@ -107,7 +109,10 @@
                     <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#items"><i class="fa fa-reorder"></i> Items</a></li>
                     <li><a href="#contact"><i class="fa fa-comment"></i> Forums</a></li>
-                    <li><a href="#login"><i class="fa fa-shield"></i> Login</a></li>
+                    <li>
+                        <a ng-if="user.isLoggedIn === true" href="#profile/{{user.userId}}"><i class="fa fa-user"></i> {{user.name}}</a>
+                        <a ng-if="user.isLoggedIn === false" href="#login"><i class="fa fa-shield"></i> Login</a>
+                    </li>
                 </ul>
             </div>
         </nav>
