--- a/app/js/pages/items.html
+++ b/app/js/pages/items.html
@@ -69,6 +69,12 @@
     }
 </style>
 <div class="container-fluid">
+    <div class="row text-center" ng-hide="globals.isNothing(items) == false">
+        <h1><i class="fa fa-spinner fa-spin"></i></h1>
+        Please Wait
+        <br>
+        <br>
+    </div>
     <div class="row">
 
         <div class="page-header" style="padding-left: 20px; margin-bottom: 0px; padding-bottom: 0px; margin-top: 0px">
@@ -79,7 +85,7 @@
         <div class="col-md-3 col-sm-6" ng-repeat="item in items" style="padding-bottom: 20px !important;">
             <div class="thumbnail">
                 <div style="height: 250px; overflow-y: hidden; vertical-align: middle">
-                    <a href="#items/{{item.item_id}}" class="">
+                    <a href="#item/{{item.item_id}}" class="">
                         <img src="{{globals.rootUrl}}app/images/items/{{item.item_id}}.jpg" alt="..."/>
                     </a>
                 </div>
