--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script src="app/js/services/itemService.js"></script>
     <script src="app/js/services/profileService.js"></script>
     <script src="app/js/services/permissionsService.js"></script>
+    <script src="app/js/services/commentService.js"></script>
     <!--Factories-->
     <script src="app/js/factories/globals.js"></script>
 
