Edited form groups

--- a/app/js/pages/editProfile.html
+++ b/app/js/pages/editProfile.html
@@ -24,7 +24,7 @@
         <br/>
 
         <form data-toggle="validator" role="form" class="col-md-4 col-sm-4">
-            <div class="form-group" style="font-size: 15px">
+            <div style="font-size: 15px">
                 <label for="nickName" class="control-label"><strong>Nickname</strong></label>
                 <input type="text" class="form-control" id="nickName" placeholder="How do you want us to remember you?"
                        required>
@@ -34,7 +34,7 @@
                     </em>
                 </small>
             </div>
-            <div class="form-group" style="font-size: 15px">
+            <div style="font-size: 15px">
                 <textarea class="form-control" rows="3" placeholder="Tell us more about you"></textarea>
                 <small>
                     <em>
@@ -42,21 +42,23 @@
                     </em>
                 </small>
             </div>
-            <div class="form-group" style="font-size: 15px">
+            <div style="font-size: 15px">
                 <label for="contact" class="control-label"><strong>Contact</strong></label>
                 <input type="number" class="form-control" id="contact" placeholder="Mobile number   (start with +639**)"
                        required>
             </div>
-            <div class="form-group">
+            <br/>
+            <div>
                 <input type="number" class="form-control" id="contact" placeholder="Landline (Please enter area code)"
                        required>
             </div>
-            <div class="form-group">
+            <br/>
+            <div>
                 <input type="email" class="form-control" id="contact" placeholder="Email Address" required>
             </div>
         </form>
         <form>
-            <div class="form-group col-md-4 col-sm-4" style="font-size: 15px">
+            <div class="col-md-4 col-sm-4" style="font-size: 15px">
                 <label class="control-label"><strong>Preferred Meeting Place</strong></label>
                 <textarea class="form-control" rows="3" placeholder="Complete Information for preferred meeting place"></textarea>
                 <div>
