--- a/app/js/pages/item.html
+++ b/app/js/pages/item.html
@@ -156,18 +156,18 @@
                         <h4>Comments</h4>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
+                <div class="row" ng-if="globals.isNothing(comments) != true">
+                    <div class="col-md-12" ng-repeat="comment in comments">
                         <blockquote>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                            <p>{{comment.comment.comment}}</p>
+                            <footer><a style="display: inline;" stl href="#/profile/{{comment.comment.poster.user_id}}">{{comment.comment.poster.user_fullname}}</a> <br>&nbsp;&nbsp;<span style="font-size: 10px">Date posted: {{comment.comment.date_posted}}</span></footer>
                         </blockquote>
                     </div>
+
+                </div>
+                <div class="row" ng-if="globals.isNothing(comments) == true">
                     <div class="col-md-12">
-                        <blockquote>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                        </blockquote>
+                        <smal>No Comments yet...</smal>
                     </div>
                 </div>
                 <br>
