--- a/app/js/pages/profile.html
+++ b/app/js/pages/profile.html
@@ -135,16 +135,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" ng-repeat="comment in comments">
                         <blockquote>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                        </blockquote>
-                    </div>
-                    <div class="col-md-12">
-                        <blockquote>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                            <p>{{comment.comment.comment}}</p>
+                            <footer>{{comment.comment.poster.user_fullname}} <br>&nbsp;&nbsp;<span style="font-size: 10px">{{comment.comment.date_posted}}</span></footer>
                         </blockquote>
                     </div>
                 </div>
