--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <script src="bower_components/ngDialog/js/ngDialog.js"></script>
     <script src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
     <script src="bower_components/gsap/src/minified/TweenMax.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.min.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/routing.js"></script>
 
