--- a/app/js/pages/profile.html
+++ b/app/js/pages/profile.html
@@ -146,12 +146,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <textarea class="form-control" rows="3"></textarea>
+                            <textarea class="form-control" ng-model="commentMessage" rows="3"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <button class="btn btn-success btn-sm" type="submit"><i class="fa fa-comment"></i> Reply Comment</button>
+                            <button class="btn btn-success btn-sm" ng-click="postComment(commentMessage)"><i class="fa fa-comment"></i> Reply Comment</button>
                             <button type="button" class="btn btn-success btn-sm"><i class="fa fa-file"></i> Send Proposal</button>
                         </div>
                     </div>
